# mechbot-3x

./: .Dockerfile  .Workaround  .env  .gitignore  .secrets.toml  CONTRIBUTING.md  Cargo.toml  Cargo.toml.backup  Dockerfile  LICENSE  README.md  README_EPICO.md  backup.sh  build.sh  build_clean.sh  celebracion_final.sh  celebration.sh  certificado_cangrejo.txt  config.backup.20251126_061400.toml  config.backup.20251126_121212.toml  config.production.toml  config.toml  config_minimal.toml  cosmic_fix.sh  crear_mundo_mecanico.sh  create-fresh-project.sh  demo_file.txt  diagnosis.txt  diagnosis_collector.sh  docker-compose.monitoring.yml  docker-compose.ymal  docker-compose.yml  ejecutar_mechbot.sh  fix-all-issues.sh  fix-android-target.sh  fix-cargo-duplicates.sh  fix-corrupted-files.sh  fix-main-imports.sh  fix-mechbot-build.sh  fix-rust-version.sh  (+20 more)
.cargo/: config.toml
benches/: navigation_bench.rs
docs/: API.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  GETTING_STARTED.md  HARDWARE.md  TROUBLESHOOTING.md
examples/: amplificacion_humana.rs  autonomous_navigation.rs  basic_movement.rs  control_system.rs  navigation_demo.rs  prueba_rapida.rs  remote_control.rs  salvando_vidas.rs  sensor_integration.rs  sistema_completo.rs  sistema_minimo.rs  sueno_cumplido.rs  websocket_client.rs
k8s/: deployment.yaml  namespace.yaml
monitoring/: prometheus.yml
scripts/: build_fix.sh  compile_step_by_step.sh  credentials_manager.sh  deploy.sh  diagnose_binary.sh  diagnose_errors.sh  docker-build.sh  find_and_run.sh  fix_android_issue.sh  fix_android_target.sh  fix_compilation.sh  fix_compilation_errors.sh  fix_imports.sh  git_push.sh  git_save.sh  global_cleanup.sh  health-check.sh  k8s-deploy.sh  monitoring.sh  (+10 more)
(+71 files in other folders)
