[package]
name = "mechbot-3x"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.0", features = ["full", "rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
log = "0.4"
env_logger = "0.10"

[lib]
name = "mechbot_3x"
path = "src/lib.rs"

[[bin]]
name = "mechbot-3x"
path = "src/main.rs"
