[package]
name = "mechbot-3x"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mechbot-3x"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.0", features = ["full", "macros", "rt-multi-thread"] }
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
